2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/import_gcry.py: Include grub/crypto.h in init.c.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (compress_kernel_lzma): Respect format security.
	(generate_image): Make prefix a const char *.
	Fix format specifications. Respect format security.
	Avoid void * arithmetics.
	Avoid shadowing.
	(argp_parser): Remove unused variable. Respect format security.
	* util/grub-mkimagexx.c (relocate_symbols): Avoid shadowing.
	(count_funcs) [!MKIMAGE_ELF64]: #if-out.
	(count_funcs): Remove unused variable.
	(relocate_addresses): Fix format specification.
	Disable x86-64 with elf32. Remove unused variables.
	(add_fixup_entry): Avoid shadowing.
	(make_reloc_section): Fix format specification.
	Use assert.
	(locate_sections): Fix format specifications.
	(load_image): Avoid shadowing.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (setup): Remove unused variable. Avoid shadowing.
	Fix format specifications. Respect format security.
	Don't translate already translated grub_errmsg.
	(argp_parser): Remove unused variable

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrelpath.c (argp_parser): Remove unused variable.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkpasswd-pbkdf2.c (argp_parser): Remove unused variable.
	(main): Likewise. Use xmalloc. Respect format security.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mklayout.c (console_grub_equivalence): Make "layout"
	a const char *.
	(argp_parser): Remove unused variable.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkfont.c (grub_font_info): Make name a const char *.
	(add_pixel): Make static.
	(add_font): Likewise.
	(write_string_section): Make name and str a const char *.
	(write_be16_section): Make name a const char *.
	(print_glyphs): Make static.
	(write_font_ascii_bitmap): Likewise.